# ringback

./: .dockerignore  .env.example  .gitattributes  .gitignore  AI_LEARNINGS_FOR_NEXT_PROJECT.md  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  Makefile  PLAYBOOK.md  PORTFOLIO_RESUME_LINKEDIN_MARKETING.md  README.md  RESUME_UPDATED.tex  ROADMAP.md  docker-compose.yml  package-lock.json  package.json
agent/: Dockerfile  README.md  conftest.py  pyproject.toml
agent/evals/: __init__.py  dataset.py  run.py
agent/ringback_agent/: __init__.py  agent.py  config.py  escalation.py  guardrails.py  logging_.py  playground.py  service.py  state.py  vertical.py
agent/ringback_agent/llm/: __init__.py  base.py  providers.py  rulebased.py
agent/ringback_agent/tools/: __init__.py  base.py  mock_calendar.py  mock_crm.py
agent/ringback_agent/verticals/: clinic.json  home_services.json
agent/tests/: helpers.py  test_agent_booking.py  test_escalation.py  test_no_fabricated_availability.py  test_no_write_without_confirmation.py  test_scope_lock.py
db/: schema.sql  supabase-setup.sql
docs/: 05-prd-voice-inbound-agent.md  AUTOMATION-GUIDE.md  DEPLOYMENT-FREE-STACK.md  PROVIDERS.md
orchestrator/: Dockerfile  README.md  conftest.py  pyproject.toml
orchestrator/app/: agent_client.py  config.py  crypto.py  db.py  deps.py  errors.py  main.py  n8n.py  repo.py  security.py
orchestrator/app/routers/: auth.py  calls.py  config.py  health.py  integrations.py  playground.py
orchestrator/tests/: test_auth.py  test_health.py  test_tenant_isolation.py
voice/: README.md
web/: Dockerfile  README.md  next.config.js  package.json
(+26 files in other folders)
