[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ringback-orchestrator"
version = "0.1.0"
description = "Ringback orchestrator — auth, tenant scoping, call logging, playground, n8n seam."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "cryptography>=42",   # at-rest encryption of integration credentials (hard rule)
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
